# faro

./: CMakeLists.txt  CMakeLists.txt.user.2b58797  FaroManager.cpp  README.md  String_Zh_Cn.js  api.cpp  api.h  applicationcontroller.h  cmake_install.cmake  crashwatcher.h  faromanager.cpp  faromanager.h  faroscannercontroller.cpp  faroscannercontroller.h  filemanager.cpp  filemanager.h  http.cpp  http.h  httpclient.cpp  httpclient.h  imageprocessor.cpp  imageprocessor.h  main.cpp  main.qml  nativeWifiConnect.cpp  nativeWifiConnect.h  networkhelper.cpp  networkhelper.h  qml.qrc  qtenumclass.cpp  qtenumclass.h  qtquickcontrols2.conf  settingsmanager.cpp  settingsmanager.h  string.js  syncplyapi.cpp  syncplyapi.h  uploadnetthread.cpp  uploadnetthread.h  util.cpp  (+3 more)
Base/: qmldir
Dialog/: BaseDialog.qml  ChangePassPop.qml  Dialog.qml  Hub.qml  Toast.qml  qmldir
EasyQtSql/: filemodel.cpp  filemodel.h  sqlmanager.cpp  sqlmanager.h
Login/: Login.qml  LoginDialog.qml  LoginModeSelectionDialog.qml  LoginTextField.qml  qmldir
Lottie/: LottieAnimation.qml  qmldir
Modules/: qmldir
Modules/Base/: BaseMajorTabBar.qml  BaseNavigationBar.qml  BaseTabBar.qml  MainView.qml  MajorMainView.qml
Modules/Component/: BaseModeCell.qml  DefaultTipsPop.qml  MHeaderListButtonGroup.qml  MHeaderListView.qml  NoDataView.qml  PullListViewV2.qml  ScanningFaroPop.qml  SelectMeasureListButtonView.qml  SelectMeasureModeCell.qml  SelectMeasureModePopUp.qml  TipsPopUp.qml
Modules/Home/: EnlargeImage.qml  HomeGridItemView.qml  HomeGridSubConView.qml  HomeGridView.qml  HomePage.qml  MorePopUp.qml  SearchBar.qml  SearchView.qml  SelectBuildingView.qml  SelectFloorView.qml  TaskDetailsCell.qml  TaskDetailsListHeaderView.qml  TaskDetailsView.qml  TreeView.qml
Modules/Mine/: MinePage.qml  ScanningWifiLottiePop.qml  SettingItem.qml  UploadItemItemView.qml  UploadItemView.qml  UploadPage.qml  UserInfoPage.qml
Modules/Result/: ItemviewResult.qml  ResultPage.qml
Modules/Scan/: ScanHeaderView.qml  ScanImageHeaderView.qml  ScanPage.qml  ScanSearchResultDialog.qml  ScanSelectBuildingPop.qml  ScanSelectFloorPop.qml  ScanSelectPop.qml  ScanSelectProjectPop.qml  ScanSelectRoomPop.qml  ScanSelectStationNoDialog.qml  ScanSelectTaskDialog.qml  ScanSelectUnitPop.qml
Util/: Api.qml  GlobalEnum.js  GlobalFunc.js  Theme.qml  qmldir  string.js
images/json/: net_loading.json  upload_file.json
